--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.3",
+    "google-map-react": "^2.2.1",
+    "google-maps-react-markers": "^2.0.10",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.2",
     "react-datepicker": "^7.1.0",
