--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
     "google-map-react": "^2.2.1",
     "google-maps-react-markers": "^2.0.10",
     "react": "^18.3.1",
